[package]
name = "zaber-opcua-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
axum = "0.7.7"
chrono = "0.4.38"
crossbeam-channel = "0.5.13"
crossbeam-queue = "0.3.11"
futures = "0.3.31"
opcua = "0.12.0"
serde = { version = "1.0.214", features=["derive"] }
serde_with = "3.11.0"
tokio = "1.41.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
#zproto = "0.3.5"
zproto = { git = "https://github.com/stphnt/zproto.git", branch = "mock-port", features = ["mock"]}
#zproto = { path = "../zproto", features = ["mock"] }

