[package]
name = "zaber-opcua-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ads1x1x = { git = "https://github.com/eldruin/ads1x1x-rs.git", branch = "master" }
anyhow = "1.0.90"
axum = { version="0.7.7", features=["ws"] }
axum-extra = { version="0.9.6", features=["typed-header"] }
chrono = "0.4.38"
crossbeam-channel = "0.5.13"
crossbeam-queue = "0.3.11"
futures = "0.3.31"
opcua = "0.12.0"
serde = { version = "1.0.214", features=["derive"] }
serde_json = "1.0.133"
serde_with = { version = "3.11.0", features = ["chrono_0_4"] }
tokio = "1.41.1"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zproto = "0.4.0"
#zproto = { git = "https://github.com/stphnt/zproto.git", branch = "mock-port", features = ["mock"] }
ch341 = { path = "../ch341" }
linux-embedded-hal = "0.4.0"
