[package]
name = "lus_positioning_control"
version = "0.1.0"
edition = "2021"

[dependencies]
ads1x1x = { git = "https://github.com/eldruin/ads1x1x-rs.git", branch = "master" }
anyhow = "1.0.90"
axum = { version="0.7.7", features=["ws"] }
axum-extra = { version="0.9.6", features=["typed-header"] }
chrono = "0.4.38"
crossbeam-channel = "0.5.13"
crossbeam-queue = "0.3.11"
futures = "0.3.31"
opcua = { version = "0.12.0", features=["vendored-openssl"] }
serde = { version = "1.0.214", features=["derive"] }
serde_json = "1.0.133"
serde_with = { version = "3.11.0", features = ["chrono_0_4"] }
tokio = "1.41.1"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zproto = "0.4.1"
ftdi-embedded-hal =  { version = "0.22.0", features = ["libftd2xx", "libftd2xx-static"] }
nb = "1.1.0"
evalexpr = "12.0.2"
tower = "0.5.2"
rayon = "1.10.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
pprof = { version = "0.14.0", features = ["flamegraph", "criterion"] }

[[bench]]
name = "control"
harness = false

[profile.bench]
debug = true
